# frankenphp-panel

./: .gitignore  Cargo.toml  README.md  install.sh
migrations/: 20240218000000_init.sql  20250218000000_add_php_version.sql  20250218100000_add_db_privileges.sql
scripts/: caddy-snippet.conf  caddyfile-main.example  db-create.sh  db-delete.sh  env.example  frankenphp-panel.service  install-frankenphp.sh  site-create.sh  site-delete.sh
src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  state.rs  templates.rs
src/handlers/: dashboard.rs  databases.rs  login.rs  mod.rs  sites.rs
static/: app.js  style.css
templates/: add_database.html  add_site.html  base.html  dashboard.html  login.html  site_detail.html
